--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ h4 {
     display: block!important;
 }
 
+.centered-content {
+    max-width: 800px;
+}
+
 /* Buttons */
 
 .button {
@@ -166,8 +170,7 @@ h4 {
 }
 
 .card {
-    flex-shrink: 0;
-    flex-basis: calc(33.3% - 1rem);
+    flex: 0 0 calc(33.3% - 1rem);
     border: 1px solid #b5b5b5;
     background: #f5f5f5;
     margin-bottom: 2rem;
@@ -338,6 +341,7 @@ h4 {
 }
 
 /* Interns */
+/* Us */
 
 .us-content {
     display: grid;
@@ -350,4 +354,12 @@ h4 {
     font-size: 2rem;
     margin: 0;
     padding: 1rem 0 3rem 0;
+}
+
+/* Ad */
+
+.resume-property {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
