--- a/css/main.css
+++ b/css/main.css
@@ -72,8 +72,13 @@ h4 {
     display: inline-block;
     text-align: center;
     border: none;
+    border-radius: 1rem;
     /* display: block; */
     /* flex: 0 0 100%; */
+}
+
+.button:hover {
+    cursor: pointer;
 }
 
 .yellow-button {
@@ -362,4 +367,57 @@ h4 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+
+/* Contacto */
+
+.contact p {
+    font-size: 1.4rem;
+    color: #333333;
+    margin:  2rem 0 0 0;
+}
+
+legend {
+    font-size: 2.3rem;
+    color: #333333;
+}
+
+label {
+    font-weight: 700;
+    display: block;
+    text-transform: uppercase;
+    display: block;
+}
+
+input:not([type="submit"]),
+textarea,
+select {
+    padding: 1rem;
+    display: block;
+    width: 98%;
+    background-color: #e1e1e1;
+    margin-bottom: 2rem;
+    border:none;
+    border-radius: .5rem;
+}
+
+input[type="radio"] {
+    width: auto;
+}
+
+select {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+textarea {
+    height: 20rem;
+}
+
+.contact-feature {
+    max-width: 30rem;
+    display: flex;
+    justify-content: space-between;
+    
 }
