--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,16 @@
-
 html {
     box-sizing: border-box;
-    font-size: 62.5%; /*To reset REM's 62.5% = 10px of 16px*/
+    font-size: 62.5%;
+    /*To reset REM's 62.5% = 10px of 16px*/
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.6rem;
     line-height: 2;
     margin: 0;
 }
+
 
 /* Global */
 
@@ -19,7 +20,8 @@ img {
 
 .container {
     width: 95%;
-    max-width: 120rem; /* = 1200px */
+    max-width: 120rem;
+    /* = 1200px */
     margin: 0 auto;
 }
 
@@ -39,12 +41,14 @@ h4 {
     font-size: 2.6rem;
 }
 
+
 /* Utilities */
 
 .section {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
 .fw-300 {
     font-weight: 300;
 }
@@ -54,12 +58,13 @@ h4 {
 }
 
 .d-block {
-    display: block!important;
+    display: block !important;
 }
 
 .centered-content {
     max-width: 800px;
 }
+
 
 /* Buttons */
 
@@ -87,7 +92,7 @@ h4 {
 
 .button:hover {
     cursor: pointer;
-    background-color: #e08709
+    background-color: #e08709;
 }
 
 .yellow-button {
@@ -98,11 +103,12 @@ h4 {
     background-color: #282c34;
 }
 
+
 /* Header */
 
 .site-header {
     background-color: #282c34;
-    padding: 1rem 0 3rem 0 ;
+    padding: 1rem 0 3rem 0;
 }
 
 .site-header.inicio {
@@ -125,7 +131,6 @@ h4 {
     .header-content {
         text-align: left;
     }
-    
 }
 
 .header-content h1 {
@@ -133,13 +138,11 @@ h4 {
     padding-bottom: 2rem;
     max-width: 60rem;
     line-height: 2;
-   
 }
 
 .navbar {
     padding-top: 3rem;
 }
-
 
 @media only screen and (min-width: 768px) {
     .navbar {
@@ -149,12 +152,14 @@ h4 {
     }
 }
 
+
 /* Navigation */
 
 .nav a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 2.4rem; /* = 23px*/
+    font-size: 2.4rem;
+    /* = 23px*/
     padding-right: 1rem;
     display: block;
 }
@@ -162,7 +167,8 @@ h4 {
 @media only screen and (min-width: 768px) {
     .nav a {
         display: inline-block;
-        font-size: 2rem; /* = 23px*/
+        font-size: 2rem;
+        /* = 23px*/
         margin-right: 2rem;
     }
     .nav a:last-of-type {
@@ -173,6 +179,7 @@ h4 {
 .nav a:hover {
     color: #71b100;
 }
+
 
 /*Hamburger menu*/
 
@@ -210,30 +217,27 @@ h4 {
     }
 }
 
-
 .icon {
     text-align: center;
     line-height: 2.5rem;
     padding: 2.5rem;
 }
 
-
 @media only screen and (min-width: 768px) {
     .icon {
         flex-basis: calc(33.3% - 1rem);
-
     }
 }
-
 
 .icon h3 {
     text-transform: uppercase;
 }
 
+
 /* Ads */
 
 @media only screen and (min-width: 768px) {
-    .card-container{
+    .card-container {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -246,23 +250,22 @@ h4 {
     margin-bottom: 2rem;
 }
 
-
 @media only screen and (min-width: 768px) {
     .card {
         flex: 0 0 calc(33.3% - 1rem);
     }
 }
 
-
 .card-body {
     padding: 2rem;
 }
 
-.card-body h3,p{
+.card-body h3,
+p {
     margin: 1rem;
 }
 
-.price{
+.price {
     color: #71b100;
     font-weight: 700;
 }
@@ -278,7 +281,6 @@ h4 {
 
 .icon-features li {
     display: flex;
-    
 }
 
 .icon-features li img {
@@ -311,6 +313,7 @@ h4 {
     font-size: 1.8rem;
 }
 
+
 /* Low Section */
 
 @media only screen and (min-width: 768px) {
@@ -318,11 +321,9 @@ h4 {
         display: flex;
         justify-content: space-between;
     }
-    
     .low-section .blog {
         flex-basis: 60%;
     }
-    
     .low-section .testimonials {
         flex-basis: calc(40% - 2rem);
     }
@@ -348,13 +349,12 @@ h4 {
     .blog-entry .blog-img {
         flex-basis: 40%;
     }
-    
     .blog-entry .text-entry {
         flex-basis: calc(60% - 3rem);
     }
 }
 
-.text-entry a{
+.text-entry a {
     color: #000000;
     text-decoration: none;
 }
@@ -365,10 +365,10 @@ h4 {
 }
 
 .text-entry h4::after {
-    content: '';
+    content: "";
     display: block;
     width: 15rem;
-    height: .5rem;
+    height: 0.5rem;
     background-color: #282c34;
     margin-top: 1rem;
 }
@@ -376,6 +376,7 @@ h4 {
 .text-entry span {
     color: #e08709;
 }
+
 
 /* Testimonials */
 
@@ -391,8 +392,8 @@ h4 {
     text-align: right;
 }
 
- .testimonial blockquote::before {
-    content: '';
+.testimonial blockquote::before {
+    content: "";
     background-image: url(../assets/img/comilla.svg);
     width: 4rem;
     height: 4rem;
@@ -405,6 +406,7 @@ h4 {
     padding-left: 5rem;
     font-weight: 300;
 }
+
 
 /* Footer */
 
@@ -440,7 +442,10 @@ h4 {
     color: #ffffff;
 }
 
+
 /* Interns */
+
+
 /* Us */
 
 @media only screen and (min-width: 768px) {
@@ -451,12 +456,13 @@ h4 {
     }
 }
 
-.us-text blockquote{
+.us-text blockquote {
     font-weight: 900;
     font-size: 2rem;
     margin: 0;
     padding: 1rem 0 3rem 0;
 }
+
 
 /* Ad */
 
@@ -472,7 +478,7 @@ h4 {
 .contact p {
     font-size: 1.4rem;
     color: #333333;
-    margin:  2rem 0 0 0;
+    margin: 2rem 0 0 0;
 }
 
 legend {
@@ -494,14 +500,14 @@ select {
     width: 98%;
     background-color: #e1e1e1;
     margin-bottom: 2rem;
-    border:none;
-    border-radius: .5rem;
+    border: none;
+    border-radius: 0.5rem;
 }
 
 @media (max-width: 768px) {
     input:not([type="submit"]),
     textarea,
-    select{
+    select {
         width: 90%;
         display: inline-block;
     }
@@ -524,6 +530,4 @@ textarea {
     max-width: 30rem;
     display: flex;
     justify-content: space-between;
-    
 }
-
